--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.3",
     "bson": "^6.8.0",
     "expo": "~51.0.26",
     "expo-camera": "~15.0.14",
