--- a/app.json
+++ b/app.json
@@ -18,7 +18,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.sija.historiclandmarkapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -33,5 +38,10 @@
         }
       ]
     ],
+    "extra": {
+      "eas": {
+        "projectId": "02730060-165c-4839-bb88-2679767faf53"
+      }
+    }
   }
 }
