--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.7.3",
     "bson": "^6.8.0",
     "expo": "~51.0.26",
@@ -26,7 +27,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
