--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.3",
     "bson": "^6.8.0",
     "expo": "~51.0.26",
+    "expo-blur": "~13.0.2",
     "expo-camera": "~15.0.14",
     "expo-image-picker": "~15.0.7",
     "expo-server-sdk": "^3.10.0",
