--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^4.3.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -19,6 +20,7 @@
     "expo": "~51.0.26",
     "expo-blur": "~13.0.2",
     "expo-camera": "~15.0.14",
+    "expo-crypto": "~13.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-server-sdk": "^3.10.0",
     "expo-status-bar": "~1.12.1",
